# QFormat

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  main
cmake/: CompileOptions.cmake
include/: qformat.hpp
test/: CMakeLists.txt  qformat_basic_tests.cpp
